# agentwit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/: mcp_spec_version.json
.github/workflows/: build_gui.yml  mcp_spec_watch.yml  mcp_spec_watch2.yml
agentwit/: __init__.py  cli.py  gui_launcher.py
agentwit/analyzer/: __init__.py  owasp_mapper.py  scorer.py  timeline.py
agentwit/ingest/: __init__.py  server.py
agentwit/integrations/: __init__.py  langchain.py
agentwit/monitor/: backup.py  cost_guard.py  tool_watcher.py
agentwit/notifier/: __init__.py  webhook.py
agentwit/plugins/: __init__.py  base.py
agentwit/proxy/: __init__.py  http_proxy.py  sse_proxy.py  stdio_proxy.py
agentwit/reporter/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py
agentwit/security/: bypass_detector.py  signing.py
agentwit/witness/: __init__.py  chain.py  log.py
docker/: README.md  docker-compose.siem.yml  docker-compose.yml  fluent-bit.conf  loki-config.yaml
docker/agentwit-proxy/: Dockerfile
docker/grafana-provisioning/dashboards/: agentwit.json  dashboards.yaml
docker/grafana-provisioning/datasources/: loki.yaml
docs/: api-reference.md  architecture.md  plugin-guide.md  quickstart.md
examples/: demo.sh  dummy_mcp_server.py  quickstart_http.py  sample_witness_log.json
gui/: index.html  package-lock.json  package.json  reference-ui.html  vite.config.ts
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs  mcp.rs
gui/src/components/: ConnectionPanel.tsx  ExecutionPanel.tsx  MonocularIcon.tsx  StatusBar.tsx  ToolList.tsx
gui/src/components/RightPanel/: CompareTab.tsx  HistoryTab.tsx  MetricsTab.tsx  index.tsx
gui/src/components/__tests__/: HistoryTab.test.tsx
gui/src/i18n/: en.ts  index.ts  ja.ts
gui/src/lib/: mcpClient.ts
gui/src/store/: useStore.ts
gui/src/types/: mcp.ts
tests/: __init__.py  test_agent_monitor.py  test_anomaly_detector.py  test_backup.py  test_bypass_detector.py  test_chain.py  test_cost_guard.py  test_html_reporter.py  test_injection_detection.py  test_markdown_reporter.py  test_owasp_mapper.py  test_plugins.py  test_scorer.py  test_scorer_phase2.py  test_signing.py  test_stdio_proxy.py  test_timeline.py  test_tool_watcher.py  test_webhook.py  test_witness_log.py
