[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwit"
version = "0.1.0"
description = "Transparent proxy witness for AI agent ↔ MCP server communications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "anyio>=4.3.0",
]

[project.scripts]
agentwit = "agentwit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentwit"]
