[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwit"
version = "0.2.0"
description = "Transparent proxy witness for AI agent ↔ MCP server communications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "tokotokokame"}]
keywords = ["mcp", "ai-agent", "proxy", "audit", "witness", "security", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "anyio>=4.3.0",
]

[project.scripts]
agentwit = "agentwit.cli:main"

[project.optional-dependencies]
full = [
    "langchain-core>=0.2.0",   # LangChain integration
    "httpx>=0.27.0",           # Webhook notifications (shared with core deps)
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/tokotokokame/agentwit"
Repository = "https://github.com/tokotokokame/agentwit"
Issues = "https://github.com/tokotokokame/agentwit/issues"
Changelog = "https://github.com/tokotokokame/agentwit/releases"

[tool.hatch.build.targets.wheel]
packages = ["agentwit"]
