[package]
name = "mcp-inspector"
version = "0.1.0"
description = "MCP Inspector GUI"
authors = []
license = ""
repository = ""
default-run = "mcp-inspector"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mcp_inspector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mcp-inspector"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
